APIs/netboxdemo.com/2.4/javascript-client/docs/Rack.md
# NetBoxApi.Rack

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**comments** | **String** |  | [optional] 
**created** | **Date** |  | [optional] [readonly] 
**customFields** | **Object** |  | [optional] 
**descUnits** | **Boolean** | Units are numbered top-to-bottom | [optional] 
**displayName** | **String** |  | [optional] [readonly] 
**facilityId** | **String** |  | [optional] 
**group** | [**NestedRackGroup**](NestedRackGroup.md) |  | [optional] 
**id** | **Number** |  | [optional] [readonly] 
**lastUpdated** | **Date** |  | [optional] [readonly] 
**name** | **String** |  | 
**role** | [**NestedRackRole**](NestedRackRole.md) |  | [optional] 
**serial** | **String** |  | [optional] 
**site** | [**NestedSite**](NestedSite.md) |  | 
**tags** | **[String]** |  | [optional] 
**tenant** | [**NestedTenant**](NestedTenant.md) |  | [optional] 
**type** | [**Type**](Type.md) |  | [optional] 
**uHeight** | **Number** |  | [optional] 
**width** | [**Width**](Width.md) |  | [optional] 


