APIs/netboxdemo.com/2.8/javascript-client/docs/Rack.md
# NetBoxApi.Rack

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**assetTag** | **String** | A unique tag used to identify this rack | [optional] 
**comments** | **String** |  | [optional] 
**created** | **Date** |  | [optional] [readonly] 
**customFields** | **Object** |  | [optional] 
**descUnits** | **Boolean** | Units are numbered top-to-bottom | [optional] 
**deviceCount** | **Number** |  | [optional] [readonly] 
**displayName** | **String** |  | [optional] [readonly] 
**facilityId** | **String** | Locally-assigned identifier | [optional] 
**group** | [**NestedRackGroup**](NestedRackGroup.md) |  | [optional] 
**id** | **Number** |  | [optional] [readonly] 
**lastUpdated** | **Date** |  | [optional] [readonly] 
**name** | **String** |  | 
**outerDepth** | **Number** | Outer dimension of rack (depth) | [optional] 
**outerUnit** | [**OuterUnit**](OuterUnit.md) |  | [optional] 
**outerWidth** | **Number** | Outer dimension of rack (width) | [optional] 
**powerfeedCount** | **Number** |  | [optional] [readonly] 
**role** | [**NestedRackRole**](NestedRackRole.md) |  | [optional] 
**serial** | **String** |  | [optional] 
**site** | [**NestedSite**](NestedSite.md) |  | 
**status** | [**Status6**](Status6.md) |  | [optional] 
**tags** | **[String]** |  | [optional] 
**tenant** | [**NestedTenant**](NestedTenant.md) |  | [optional] 
**type** | [**Type6**](Type6.md) |  | [optional] 
**uHeight** | **Number** | Height in rack units | [optional] 
**width** | [**Width**](Width.md) |  | [optional] 


